# Variation_Graph

./: .gitignore  Cargo.toml  README.md
dataset/: ENSG00000000419.13.aligned.txt  ENSG00000000460.17.aligned.txt  input_2.maf  input_3.maf  no_alignment_block.maf  one_al_block.maf  test_01.maf  test_1.aligned.txt  test_1.maf  test_2.maf  test_3.maf  two_sequence.maf
src/: alignment_parser.rs  lib.rs  maf_paser.rs  main.rs  parser.rs  partitioner.rs  variation_graph.rs
src/multiple_alignment_format/: output.rs  parser.rs
tests/: parser_test.rs  variation_graph_test.rs
